# Chip8-Emulator

chip8_core/src/: lib.rs
desktop/: Cargo.toml
desktop/src/: main.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
web/: index.html  index.js  wasm.js  wasm_bg.wasm
